--- a/css/base.scss
+++ b/css/base.scss
@@ -40,7 +40,7 @@ header nav{@extend .fsNormal2;margin:0 0 0 215px;text-transform:uppercase;line-h
 header nav ul{margin-right:45px;border-left:1px #666 solid;padding-left:8px;@extend .floatLeft}
 header nav ul li{padding-bottom:10px;}
 header nav ul li:last-child{padding-bottom:0px;}
-#slides,.nivo_slider_container{padding-top:35px;height:250px;overflow:hidden;position:relative;}
+#slides,.metaslider{padding-top:35px;height:250px;overflow:hidden;position:relative;}
 #slides .caption,#slides .caption-black,.nivo-caption{z-index:500;position:absolute;left:0;padding:0 40px;width:660px;@extend .fsLarge;text-shadow:none;border-top-width:4px;border-top-style:solid;border-top-color:#414141;}
 .nivo-caption{background:#6e6e6e;background:rgba(110,110,110,.5);color:#fff;}
 #slides .caption{background:#d1d3d4;background:rgba(255,255,255,.5);color:#333333;}
@@ -134,6 +134,7 @@ aside#wrapper-subnav .widget h2:first-child{margin-top:0px}
 aside#wrapper-subnav .widget a.highlight{padding-top:15px;color:#F7941D;display:block}
 aside#wrapper-subnav .widget ul li.current-menu-item ul li a{color:#666}
 aside#wrapper-subnav .widget ul li.current-menu-item a,aside#wrapper-subnav li.current-page-ancestor a.active{color:#F7941D}
+aside .menu-item-has-children ul {display: none;}
 /* ------------ END ASIDE - SUB NAV ------------ */
 /* HOME */
 article.home{margin:0;padding:0}
