--- a/css/magnific-popup.scss
+++ b/css/magnific-popup.scss
@@ -23,7 +23,7 @@ button::-moz-focus-inner{padding:0;border:0;}
 .mfp-close{width:44px;height:44px;line-height:44px;position:absolute;right:0;top:0;text-decoration:none;text-align:center;opacity:0.65;filter:alpha(opacity=65);padding:0 0 18px 10px;color:white;font-style:normal;font-size:28px;font-family:Arial,Baskerville,monospace;}
 .mfp-close:hover,.mfp-close:focus{opacity:1;filter:alpha(opacity=100);}
 .mfp-close:active{top:1px;}
-.mfp-close-btn-in .mfp-close{color:#333333;}
+.mfp-close-btn-in .mfp-close{color:#333333;position: fixed;right: 40px;}
 .mfp-image-holder .mfp-close,.mfp-iframe-holder .mfp-close{color:white;right:-6px;text-align:right;padding-right:6px;width:100%;}
 .mfp-counter{position:absolute;top:0;right:0;color:#cccccc;font-size:12px;line-height:18px;}
 .mfp-arrow{position:absolute;opacity:0.65;filter:alpha(opacity=65);margin:0;top:50%;margin-top:-55px;padding:0;width:90px;height:110px;-webkit-tap-highlight-color:rgba(0,0,0,0);}
